--- a/index.html
+++ b/index.html
@@ -25,23 +25,24 @@
     </nav>
 </div>
 
-    <!-- <img src="img/hero.jpg" > -->
-
-    <section class="hero">
-        <div class="contenido-hero">
-        <h1>Asesoría Contable</h1>
-
-        <p>
+    <section class="fondo">
+        <div class="contenido-fondo">
+            <h1>Asesoría Contable</h1>
+            <!-- <p class="contenido-fondo-intro">La Asesoria Contable corresponde a la asistencia y guia en la gestión
+            de la contabilidad que en Contaduria y Asesoría SPA ofrece a sus clientes a travé
+            de todo los servicios que ofrecemos como consultores</s>
+            </p> -->
+            <div class="Ubicacion">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="64" height="64"
                 viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                 <circle cx="12" cy="11" r="3" />
                 <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-            </svg>
-            Chile, RM, Las Condes</p>
-
-        <a class="boton" href="#">Contactar</a>
-        </div>
+            </svg>        
+            <p>Chile, RM, Las Condes</p>
+            </div>
+            <a class="boton" href="#">Contactar</a>
+        </div>/*.contenido-fondo */
     </section>
 
     <main>
