--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
         </div>/*.contenido-fondo */
     </section>
 
-    <main>
+    <main class="contenedor sombra">
         <h2>Nuestros Servicios</h2>
- 
+
+    <div class="servicios">
     <section>
         <h3>Asesoria contable y Tributaria mensual</h3>
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-notebook" width="64" height="64"
@@ -112,6 +113,7 @@
             sentium excepturi asperiores nam pariatur nemo quidem necessitatibus
             esse, soluta eius odio nihil?</p>
     </section>
+    </div> <!--Servicios cierre-->
 
     </main>
 
