A.R. se modifico nuestros servicios y se agrego columna con grid

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="nosotros.html">Nosotros</a>
         <a href="registrate.html">Registrate</a>
     </nav>
-</div>
+</div> <!--Contenido fondo -->
 
     <section class="fondo">
         <div class="contenido-fondo">
@@ -42,45 +42,52 @@
             <p>Chile, RM, Las Condes</p>
             </div>
             <a class="boton" href="#">Contactar</a>
-        </div>/*.contenido-fondo */
+        </div>
     </section>
 
     <main class="contenedor sombra">
         <h2>Nuestros Servicios</h2>
 
     <div class="servicios">
-    <section>
+    <section class="servicio">
         <h3>Asesoria contable y Tributaria mensual</h3>
+        <section class="servicio">
+        <div class="iconos">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-notebook" width="64" height="64"
             viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <path d="M6 4h11a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-11a1 1 0 0 1 -1 -1v-14a1 1 0 0 1 1 -1m3 0v18" />
             <line x1="13" y1="8" x2="15" y2="8" />
             <line x1="13" y1="12" x2="15" y2="12" />
-        </svg>
+        </svg> 
+        </div>
+        </section>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, 
         quasi! Aperiam cum non, incidunt animi repellendus temporibus prae
         sentium excepturi asperiores nam pariatur nemo quidem necessitatibus
          esse, soluta eius odio nihil?</p>
     </section>
 
-    <section>
+    <section class="servicio">
         <h3>Asignacion de analista contable para su empresa</h3>
+        <div class="iconos">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-plus" width="64" height="64"
             viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <circle cx="9" cy="7" r="4" />
             <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
             <path d="M16 11h6m-3 -3v6" />
-        </svg>
+        </svg> 
+        </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
             quasi! Aperiam cum non, incidunt animi repellendus temporibus prae
             sentium excepturi asperiores nam pariatur nemo quidem necessitatibus
             esse, soluta eius odio nihil?</p>
     </section>
 
-    <section>
+    <section class="servicio">
         <h3>Auditoria de cuentas contables</h3>
+        <div class="iconos">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-calculator" width="64" height="64"
             viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -92,30 +99,31 @@
             <line x1="8" y1="17" x2="8" y2="17.01" />
             <line x1="12" y1="17" x2="12" y2="17.01" />
             <line x1="16" y1="17" x2="16" y2="17.01" />
-        </svg>
+        </svg> 
+        </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
             quasi! Aperiam cum non, incidunt animi repellendus temporibus prae
             sentium excepturi asperiores nam pariatur nemo quidem necessitatibus
             esse, soluta eius odio nihil?</p>
     </section>
     
-    <section>
+    <section class="servicio">
         <h3>Visitas periodicas a oficinas de clientes</h3>
+        <div class="iconos">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-jump-rope" width="64" height="64"
             viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
             <path d="M6 14v-6a3 3 0 1 1 6 0v8a3 3 0 0 0 6 0v-6" />
             <rect x="16" y="3" width="4" height="7" rx="2" />
             <rect x="4" y="14" width="4" height="7" rx="2" />
-        </svg>
+        </svg> 
+        </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
             quasi! Aperiam cum non, incidunt animi repellendus temporibus prae
             sentium excepturi asperiores nam pariatur nemo quidem necessitatibus
             esse, soluta eius odio nihil?</p>
     </section>
-    </div> <!--Servicios cierre-->
-
-    </main>
+    </div> 
 
     <selection>
         <h2>Formulario de Contacto</h2>
@@ -155,6 +163,7 @@
             </fieldset>
         </form>
     </selection>
+    </main>
 
     <footer>
         <p>Los derechos reservados. Contaduria SPA</p>
