A.R. HTML de home terminado

--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
                 </section>
 
                 <section class="servicio">
-                    <h3>Asignacion de analista contable para su empresa</h3>
+                    <h3>Asig. de analista para su empresa</h3>
                     <div class="iconos">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-plus"
-                            width="64" height="64" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-plus" width="64" height="64" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
                             stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                             <circle cx="9" cy="7" r="4" />
@@ -164,7 +163,7 @@
     </selection>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p>Los derechos reservados. Contaduria SPA</p>
     </footer>
 
