A.R HTML registro y nosotros

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <header>
         <h2 class="titulo"> Contaduria y Asesorias <span>SPA</span></h2>
+        <a href="index.html"></a>
     </header>
 
     <div class="nav-bg">
@@ -157,14 +158,14 @@
             </div> <!--Contenedor de los campos formulario-->
                 <div class="alinear-derecha flex">
                     <input class="boton w-100" type="submit" value"Enviar">
-                <div>
+                </div>
             </fieldset>
         </form>
     </selection>
     </main>
 
     <footer class="footer">
-        <p>Los derechos reservados. Contaduria SPA</p>
+        <p>Los derechos reservados pertenecen a Contaduria SPA</p>
     </footer>
 
 </body>
